--- a/opencontroller.html
+++ b/opencontroller.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang='en-us'>
 <head>
   <script type="module" src="/js/esp32webtool/install-button.js"> </script>
   <link rel="stylesheet" href="/css/style.css" type="text/css">
