--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang='en-us'>
 <head>
-    <link rel="stylesheet" href="/css/style.css" type="text/css">
+    <link rel="stylesheet" href="./css/style.css" type="text/css">
+    <script type="module" src="./js/esp32webtool/install-button.js"> </script>
     <title>Handheld Legends GitHub Home</title>
 </head>
 <body>
