Attempt to fix head links

--- a/opencontroller.html
+++ b/opencontroller.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang='en-us'>
 <head>
-  <script type="module" src="/js/esp32webtool/install-button.js"> </script>
-  <link rel="stylesheet" href="/css/style.css" type="text/css">
+  <script type="module" src="./js/esp32webtool/install-button.js"> </script>
+  <link rel="stylesheet" href="./css/style.css" type="text/css">
   <title>HHL OpenController - Firmware Installer</title>
 </head>
 <body>
