--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
     <title>Handheld Legends GitHub Home</title>
 </head>
 <body>
+  <div class="context">
+  <ul class="circles">
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+  </ul>
   <h1>Handheld Legends</h1>
   <ul>
     <a href="./hoja2/"><li>Hoja 2</li></a>
@@ -16,5 +29,6 @@
     <a href="./procon2tool/"><li>Pro Controller 2 Tool</li></a>
     <a href="./gcp/"><li>GC Pocket Update Tool</li></a>
   </ul>
+  </div>
 </body>
 </html>
