--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
   </ul>
   <h1>Handheld Legends</h1>
   <ul>
-    <a href="./hoja2/"><li>Hoja 2</li></a>
-    <a href="./opencontroller.html"><li>OpenController</li></a>
-    <a href="./super_gamepad_plus.html"><li>Super Gamepad Plus</li></a>
-    <a href="./proconcalibration/"><li>Procon Calibration</li></a>
-    <a href="./procontoolkit/"><li>Pro Controller Toolkit</li></a>
-    <a href="./procon2tool/"><li>Pro Controller 2 Tool</li></a>
-    <a href="./gcp/"><li>GC Pocket Update Tool</li></a>
+    <li>Hoja 2<a href="./hoja2/"></a></li>
+    <li><a href="./opencontroller.html"><li>OpenController</li></a></li>
+    <li><a href="./super_gamepad_plus.html"><li>Super Gamepad Plus</li></a></li>
+    <li><a href="./proconcalibration/"><li>Procon Calibration</li></a></li>
+    <li><a href="./procontoolkit/"><li>Pro Controller Toolkit</li></a></li>
+    <li><a href="./procon2tool/"><li>Pro Controller 2 Tool</li></a></li>
+    <li><a href="./gcp/"><li>GC Pocket Update Tool</li></a></li>
   </ul>
   </div>
 </body>
