--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
       <li></li>
   </ul>
   <h1>Handheld Legends</h1>
-  <ul>
+  <ul id="list-home">
     <li><a href="./hoja2/">Hoja 2</a></li>
-    <li><a href="./opencontroller.html"><li>OpenController</a></li>
-    <li><a href="./super_gamepad_plus.html"><li>Super Gamepad Plus</a></li>
-    <li><a href="./proconcalibration/"><li>Procon Calibration</a></li>
-    <li><a href="./procontoolkit/"><li>Pro Controller Toolkit</a></li>
-    <li><a href="./procon2tool/"><li>Pro Controller 2 Tool</a></li>
-    <li><a href="./gcp/"><li>GC Pocket Update Tool</a></li>
+    <li><a href="./opencontroller.html">OpenController</a></li>
+    <li><a href="./super_gamepad_plus.html">Super Gamepad Plus</a></li>
+    <li><a href="./proconcalibration/">Procon Calibration</a></li>
+    <li><a href="./procontoolkit/">Pro Controller Toolkit</a></li>
+    <li><a href="./procon2tool/">Pro Controller 2 Tool</a></li>
+    <li><a href="./gcp/">GC Pocket Update Tool</a></li>
   </ul>
   </div>
 </body>
