--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <li></li>
   </ul>
   <h1>Handheld Legends</h1>
+  <div class="box">
   <ul id="list-home">
     <li><a href="./hoja2/">Hoja 2</a></li>
     <li><a href="./opencontroller.html">OpenController</a></li>
