Missing end div

--- a/index.html
+++ b/index.html
@@ -7,29 +7,30 @@
 </head>
 <body>
   <div class="context">
-  <ul class="circles">
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-  </ul>
-  <h1>Handheld Legends</h1>
-  <div class="box">
-  <ul id="list-home">
-    <li><a href="./hoja2/">Hoja 2</a></li>
-    <li><a href="./opencontroller.html">OpenController</a></li>
-    <li><a href="./super_gamepad_plus.html">Super Gamepad Plus</a></li>
-    <li><a href="./proconcalibration/">Procon Calibration</a></li>
-    <li><a href="./procontoolkit/">Pro Controller Toolkit</a></li>
-    <li><a href="./procon2tool/">Pro Controller 2 Tool</a></li>
-    <li><a href="./gcp/">GC Pocket Update Tool</a></li>
-  </ul>
+      <ul class="circles">
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+      </ul>
+      <h1>Handheld Legends</h1>
+      <div class="box">
+          <ul id="list-home">
+            <li><a href="./hoja2/">Hoja 2</a></li>
+            <li><a href="./opencontroller.html">OpenController</a></li>
+            <li><a href="./super_gamepad_plus.html">Super Gamepad Plus</a></li>
+            <li><a href="./proconcalibration/">Procon Calibration</a></li>
+            <li><a href="./procontoolkit/">Pro Controller Toolkit</a></li>
+            <li><a href="./procon2tool/">Pro Controller 2 Tool</a></li>
+            <li><a href="./gcp/">GC Pocket Update Tool</a></li>
+          </ul>
+      </div>
   </div>
 </body>
 </html>
