--- a/opencontroller.html
+++ b/opencontroller.html
@@ -24,22 +24,24 @@
     <div class="box">
       <h2>Firmware Installer</h2>
       <p>Version 4.26.2023</p>
-      <ul>
+      <ul class="list-features">
         <li>Resolves some issues with SNES protocol.</li>
         <li>Controller must be powered ON in retro mode, then plugged in.</li>
         <li>Implements N64 console support. Controller must be in retro mode and OFF. Plug in to N64, and power N64 console on.</li>
         <li>Better mappings implemented for N64/GameCube.</li>
       </ul>
+      <div class="line"></div>
       <esp-web-install-button manifest="/firmware/opencontroller_classic/manifest.json"></esp-web-install-button>
       <br>
       <div class="line"></div>
       <h2>Basic Operation Instructions</h2>
       <p>Hold select to turn the controller on or off.</p>
       <p>Hold the following action buttons on power up (Not dpad) to boot into the following modes:</p>
-      <p>Left  -> Wired Mode (SNES/GC/N64)</p>
-      <p>Right -> Nintendo Switch Mode</p>
-      <p>Up    -> XInput Mode</p>
-      <p>Down  -> DInput Mode</p>
+      <ul class="list-features">
+      <li>Left  -> Wired Mode (SNES/GC/N64)</li>
+      <li>Right -> Nintendo Switch Mode</li>
+      <li>Up    -> XInput Mode</li>
+      <li>Down  -> DInput Mode</li>
       <div class="line"></div>
       <p>If no USB cable is connected, the controller will boot into wireless mode (Except in wired mode).</p>
     </div>
