Update instructions for EFM8UB1 firmware installation
Change p tags to an ordered list to display numbered steps

--- a/opencontroller.html
+++ b/opencontroller.html
@@ -68,10 +68,12 @@
     <div class="box">
       <h2>HOJA EFM8UB1 Update Required</h2>
       <p>This update can only be run from Windows currently.</p>
-      <p>Hold the "EN" pin on your ESP32 while plugging in via USB type C.</p>
-      <p>This will enable USB bootloader on the EFM8UB1. Download the zip file linked</p>
-      <p>unzip it, and run the included .bat file to update the firmware.</p>
-      <p>Unplug and replug to finalize the firmware install.</p>
+      <ol class="instructions">
+      <li>Hold the "EN" pin on your ESP32 while plugging in via USB type C.</li>
+      <li>This will enable USB bootloader on the EFM8UB1. Download the zip file linked</li>
+      <li>Unzip it, and run the included .bat file to update the firmware.</li>
+      <li>Unplug and replug to finalize the firmware install.</li>
+      </ol>
       <a href="/firmware/hoja_efm8usb/open_controller_usb_3.23.2023.zip" target="_blank">EFM8UB1 3.23.2023 Download
         Zip</a>
     </div>
