Fix typo in XInput table entry

--- a/super_gamepad_plus.html
+++ b/super_gamepad_plus.html
@@ -50,7 +50,7 @@
         </tr>
         <tr>
           <td>X</td>
-          <td>XInput/td>
+          <td>XInput</td>
         </tr>
         <tr>
           <td>B</td>
