Update stylesheet links to relative paths

--- a/procontoolkit/index.html
+++ b/procontoolkit/index.html
@@ -5,11 +5,11 @@
   <script src="https://cdn.jsdelivr.net/npm/three@0.160.1/build/three.min.js"></script>
   <script src="js/procon_toolkit.js"></script>
   
-  <link rel="stylesheet" href="/css/style.css" type="text/css">
-  <link rel="stylesheet" href="/css/slideThree.css" type="text/css">
-  <link rel="stylesheet" href="/css/inputGrid.css" type="text/css">
-  <link rel="stylesheet" href="/css/containers.css" type="text/css">
-  <link rel="stylesheet" href="resources/pc_img.css">
+  <link rel="stylesheet" href="./css/style.css" type="text/css">
+  <link rel="stylesheet" href="./css/slideThree.css" type="text/css">
+  <link rel="stylesheet" href="./css/inputGrid.css" type="text/css">
+  <link rel="stylesheet" href="./css/containers.css" type="text/css">
+  <link rel="stylesheet" href="./resources/pc_img.css">
 </head>
 
 <body>
