--- a/procontoolkit/index.html
+++ b/procontoolkit/index.html
@@ -3,12 +3,12 @@
 
 <head>
   <script src="https://cdn.jsdelivr.net/npm/three@0.160.1/build/three.min.js"></script>
-  <script src="js/procon_toolkit.js"></script>
+  <script src="./js/procon_toolkit.js"></script>
   
-  <link rel="stylesheet" href="./css/style.css" type="text/css">
-  <link rel="stylesheet" href="./css/slideThree.css" type="text/css">
-  <link rel="stylesheet" href="./css/inputGrid.css" type="text/css">
-  <link rel="stylesheet" href="./css/containers.css" type="text/css">
+  <link rel="stylesheet" href="/handheldlegend.github.io/css/style.css" type="text/css">
+  <link rel="stylesheet" href="/handheldlegend.github.io/css/slideThree.css" type="text/css">
+  <link rel="stylesheet" href="/handheldlegend.github.io/css/inputGrid.css" type="text/css">
+  <link rel="stylesheet" href="/handheldlegend.github.io/css/containers.css" type="text/css">
   <link rel="stylesheet" href="./resources/pc_img.css">
 </head>
 
