--- a/procon2tool/index.html
+++ b/procon2tool/index.html
@@ -3,6 +3,10 @@
 
 <head>
   <meta charset="UTF-8">
+  <link rel="manifest" href="./manifest.json">
+  <link rel="icon" type="image/x-icon" href="./icons/favicon.ico">
+  <link rel="icon" type="image/png" href="./icons/256x256.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>ProCon 2 Enabler Tool</title>
   <style>
     body {
